--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav>
-    <ul>g
+    <ul>
         <li> <h2>Generos de Anime</h2> </li>
         <li> Genero de acción </li>
         <li> Genero de Aventura </li>
@@ -32,7 +32,7 @@
                 <h3>Animes Populares</h3>
                 <ul>
                     <li><strong>Naruto</strong></li>
-                    <img src="naruto_epi.jpg" alt="100" height="100">
+                    <img src="Naruto.png" alt="100" height="100">
                     <li><strong>One piece</strong></li>
                     <img src="One piece.jpg" alt="100" height="100">
                     <li><strong>Boku no Hero</strong></li>
